--- a/src/styles/components/MainMenu.css
+++ b/src/styles/components/MainMenu.css
@@ -1,5 +1,6 @@
 .main__menu__container {
-  /* background-color: yellow; */
+  padding-top: 25px;
+  background-color: yellow;
   display: flex;
   height: 100%;
   align-items: center;
