--- a/src/styles/components/AboutPage.css
+++ b/src/styles/components/AboutPage.css
@@ -1,4 +1,219 @@
-.a {
-  height: 100vh;
-  background-color: aqua;
+.about__page__container {
+  padding: 0 25px;
+}
+.about__page__inner__container {
+  padding-top: 0%;
+  display: flex;
+  flex-direction: column;
+  background-color: rebeccapurple;
+}
+.about__page__left {
+  display: flex;
+  padding-left: 86px;
+}
+.about__page__border {
+  width: 400px;
+  height: 450px;
+  border: 10px solid var(--primary-color);
+  transform: translate(-36px, 26px);
+  -webkit-transform: translate(-36px, 26px);
+  -moz-transform: translate(-36px, 26px);
+  -ms-transform: translate(-36px, 26px);
+  -o-transform: translate(-36px, 26px);
+}
+.about__page__image {
+  width: 400px;
+  max-height: 450px;
+  height: auto;
+  position: absolute;
+}
+
+.about__page__right {
+  padding: 15% 50px;
+}
+.about__page__right h3 {
+  color: var(--primary-color);
+  font-size: 2rem;
+}
+.about__page__right p {
+  padding-top: 16px;
+  line-height: 1.5;
+  font-size: 1.2rem;
+  text-align: justify;
+  margin-bottom: 50px;
+}
+
+.about__page__right a {
+  background-color: var(--primary-color);
+  text-decoration: none;
+  color: black;
+  font-size: 1.5rem;
+  border-radius: 10px;
+  text-transform: capitalize;
+  padding: 1.25ch 5.5ch;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+}
+
+.timeline {
+  position: relative;
+  min-height: 150px;
+  margin-top: 100px;
+  overflow-y: hidden;
+  padding: 0 35px;
+  margin-bottom: 55px;
+}
+
+.experiance-page-timeline-title {
+  color: var(--primary-color);
+  font-weight: bold;
+  letter-spacing: 2px;
+  margin-bottom: 1%;
+  text-transform: capitalize;
+}
+.experiance-page-timeline-time {
+  font-size: 0.8em;
+  font-style: italic;
+  margin-bottom: 3%;
+}
+.experiance-page-timeline-content {
+  text-align: start;
+  font-size: 1em;
+  margin-top: 2%;
+  line-height: 180%;
+  color: var(--primary-color);
+}
+.line {
+  position: absolute;
+  z-index: 2;
+  left: calc(50% - 1px);
+  width: 2px;
+  top: -50px;
+  bottom: -50px;
+  background-color: var(--secondary-color);
+  display: none;
+}
+
+.line::before,
+.line::after {
+  position: absolute;
+  display: block;
+  content: "";
+  height: 1.5rem;
+  width: 1.5rem;
+  border-radius: 50%;
+  background-color: var(--secondary-color);
+  left: 50%;
+  transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+  -moz-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  -o-transform: translateX(-50%);
+}
+
+.line::after {
+  bottom: 0;
+}
+
+.section {
+  display: flex;
+  opacity: 0;
+  transition: 600ms ease;
+  position: relative;
+  z-index: 1;
+  margin: 50px 0;
+  padding: 1rem;
+  border-radius: 1rem;
+  align-items: center;
+  min-height: 300px;
+  transform: translateX(-100%);
+  -webkit-transform: translateX(-);
+  -moz-transform: translateX(-);
+  -ms-transform: translateX(-);
+  -o-transform: translateX(-);
+  -webkit-transition: 600ms ease;
+  -moz-transition: 600ms ease;
+  -ms-transition: 600ms ease;
+  -o-transition: 600ms ease;
+}
+
+.section:nth-child(odd) {
+  flex-direction: row-reverse;
+  transform: translateX(100%);
+  -webkit-transform: translateX(100);
+  -moz-transform: translateX(100);
+  -ms-transform: translateX(100);
+  -o-transform: translateX(100);
+}
+
+.bead {
+  position: absolute;
+  display: block;
+  height: 1.5rem;
+  width: 1.5rem;
+  border-radius: 50%;
+  background-color: var(--secondary-color);
+  left: 50%;
+  top: 20%;
+  transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+  -moz-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  -o-transform: translateX(-50%);
+}
+
+.content {
+  width: calc(50% - 2rem);
+}
+
+.show-me:nth-child(n) {
+  opacity: 1;
+  transform: none;
+  -webkit-transform: none;
+  -moz-transform: none;
+  -ms-transform: none;
+  -o-transform: none;
+}
+
+@media only screen and (min-width: 577px) and (max-width: 768px) {
+}
+
+@media only screen and (min-width: 768px) and (max-width: 992px) {
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1200px) {
+}
+
+@media only screen and (min-width: 1200px) and (max-width: 1400px) {
+  .about__page__inner__container {
+    flex-direction: row;
+    align-items: center;
+    padding-top: 0%;
+  }
+  .about__page__right {
+    padding: 5% 50px;
+  }
+}
+
+@media only screen and (min-width: 1401px) {
+  .about__page__inner__container {
+    flex-direction: row;
+    align-items: center;
+  }
+  .about__page__border {
+    width: 460px;
+    height: 510px;
+  }
+  .about__page__image {
+    width: 460px;
+    max-height: 510px;
+  }
+  .about__page__right {
+    padding: 15% 70px;
+  }
+  .about__page__right {
+    padding: 8% 50px;
+  }
 }
