--- a/src/styles/components/AboutPage.css
+++ b/src/styles/components/AboutPage.css
@@ -1,11 +1,10 @@
 .about__page__container {
-  padding: 0 25px;
+  padding: 10% 25px;
 }
 .about__page__inner__container {
   padding-top: 0%;
   display: flex;
   flex-direction: column;
-  background-color: rebeccapurple;
 }
 .about__page__left {
   display: flex;
