--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,11 @@ html {
 }
 
 body {
-  /* background-color: black; */
-  background-color: #171717;
+  background-color: #0a192f;
+  /* background-color: #171717; */
   color: white;
+  font-family: "Lato" !important;
+  font-weight: 400 !important;
 }
+
+/* #4830D3 + #CCF381  */
