Checkpoint : Before Mobile Menu :

--- a/src/styles/base/colors.css
+++ b/src/styles/base/colors.css
@@ -1,5 +1,5 @@
 :root {
-  --main-body-color: black;
+  --main-body-color: #0a192f;
   /* --primary-color: #00ffbb; */
   --primary-color: #fce762;
   --secondary-color: #f87060;
