--- a/src/index.css
+++ b/src/index.css
@@ -5,15 +5,27 @@
 }
 
 html {
+  scrollbar-width: thin;
   scroll-behavior: smooth;
+}
+
+/* Scroll bar Styles */
+
+html::-webkit-scrollbar {
+  width: 10px;
+}
+
+html::-webkit-scrollbar-track {
+  background-color: var(--main-body-color);
+}
+
+html::-webkit-scrollbar-thumb {
+  background-color: var(--primary-color);
 }
 
 body {
   background-color: #0a192f;
-  /* background-color: #171717; */
   color: white;
-  font-family: "Lato" !important;
-  font-weight: 400 !important;
 }
 
 /* #4830D3 + #CCF381  */
