--- a/src/styles/components/MainMenu.css
+++ b/src/styles/components/MainMenu.css
@@ -1,8 +1,16 @@
 .main__menu__container {
+  position: fixed;
+  width: 100%;
+  height: fit-content;
   padding-top: 25px;
+  padding-bottom: 25px;
   display: flex;
-  height: 100%;
   align-items: center;
+  font-family: "Raleway";
+  letter-spacing: 0.5px;
+  text-transform: capitalize;
+  background-color: var(--main-body-color);
+  z-index: 2;
 }
 .main__menu__container ul {
   list-style: none;
@@ -18,8 +26,8 @@
 
 .main__menu__border {
   width: 0%;
-  height: 2px;
-  background-color: yellow;
+  height: 3px;
+  background-color: var(--primary-color);
   transition: 1200ms cubic-bezier(0.68, -0.6, 0.32, 1.6);
   -webkit-transition: 1200ms cubic-bezier(0.68, -0.6, 0.32, 1.6);
   -moz-transition: 1200ms cubic-bezier(0.68, -0.6, 0.32, 1.6);
@@ -34,8 +42,8 @@
   text-decoration: none;
   color: white;
   font-size: 15px;
-  font-weight: 600;
-  letter-spacing: 0.55px;
+  font-family: "Raleway";
+  font-size: 0.9em;
 }
 .main__menu__cta__button {
   background-color: var(--primary-color);
@@ -69,20 +77,17 @@
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
   .main__menu__container ul {
     width: 34%;
-    font-size: 18px;
   }
 }
 
 @media only screen and (min-width: 1200px) and (max-width: 1399px) {
   .main__menu__container ul {
     width: 30%;
-    font-size: 19px;
   }
 }
 
 @media only screen and (min-width: 1400px) {
   .main__menu__container ul {
     width: 20%;
-    font-size: 20px;
   }
 }
