Menu Complete Ver 1.0 : Mobile & Main Menu

--- a/src/styles/components/HamburgerMenu.css
+++ b/src/styles/components/HamburgerMenu.css
@@ -1,10 +1,17 @@
 .hamburger__menu__container {
   display: flex;
   justify-content: flex-end;
-  margin: 0 20px 0 auto;
-  padding-top: 12px;
+  margin: 0 0 0 auto;
+  padding: 8px 12px 8px 0px;
   position: fixed;
   right: 0;
+  z-index: 6;
+  background-color: var(--main-body-color);
+  transition: 1000ms cubic-bezier(0.68, -0.6, 0.32, 1.6);
+  -webkit-transition: 1000ms cubic-bezier(0.68, -0.6, 0.32, 1.6);
+  -moz-transition: 1000ms cubic-bezier(0.68, -0.6, 0.32, 1.6);
+  -ms-transition: 1000ms cubic-bezier(0.68, -0.6, 0.32, 1.6);
+  -o-transition: 1000ms cubic-bezier(0.68, -0.6, 0.32, 1.6);
 }
 
 .hamburger__menu__container label {
@@ -16,8 +23,11 @@
   overflow: hidden;
 }
 
+.hamburger--lines {
+  background-color: var(--primary-color);
+}
 .hamburger__menu__container label span {
-  background: var(--primary-color);
+  /* background-color: var(--primary-color); */
   border-radius: 10px;
   height: 5px;
   margin: 5px 0;
@@ -77,8 +87,18 @@
 }
 
 /* Hide On Larger Devices */
-@media only screen and (min-width: 577px) {
+@media only screen and (min-width: 768px) {
   .hamburger__menu__container {
     display: none;
   }
+}
+
+/* Dynamic Class */
+.hamburger--mobile--menu--active {
+  background-color: var(--main-body-color) !important;
+}
+
+.hamburger--container--mobile--menu--active {
+  background-color: var(--primary-color) !important;
+  /* background-color: red !important; */
 }
