--- a/src/styles/base/font.css
+++ b/src/styles/base/font.css
@@ -16,3 +16,8 @@
   font-family: "Roboto Mono";
   src: url("../../../public/assets/fonts/Roboto_Mono/RobotoMono-VariableFont_wght.ttf");
 }
+
+@font-face {
+  font-family: "Architects Daughter";
+  src: url("../../../public/assets/fonts/Architects-Daughter/ArchitectsDaughter-Regular.ttf");
+}
