--- a/src/styles/components/MainMenu.css
+++ b/src/styles/components/MainMenu.css
@@ -2,8 +2,7 @@
   position: fixed;
   width: 100%;
   height: fit-content;
-  padding-top: 25px;
-  padding-bottom: 25px;
+  padding: 25px 35px 25px 0;
   display: flex;
   align-items: center;
   font-family: "Raleway";
@@ -44,6 +43,14 @@
   font-size: 15px;
   font-family: "Raleway";
   font-size: 0.9em;
+  transition: color 1200ms cubic-bezier(0.68, -0.6, 0.32, 1.6);
+  -webkit-transition: color 1200ms cubic-bezier(0.68, -0.6, 0.32, 1.6);
+  -moz-transition: color 1200ms cubic-bezier(0.68, -0.6, 0.32, 1.6);
+  -ms-transition: color 1200ms cubic-bezier(0.68, -0.6, 0.32, 1.6);
+  -o-transition: color 1200ms cubic-bezier(0.68, -0.6, 0.32, 1.6);
+}
+.main__menu__container ul a:hover {
+  color: var(--primary-color);
 }
 .main__menu__cta__button {
   background-color: var(--primary-color);
@@ -60,7 +67,14 @@
 /* Targeting on hover */
 
 /* Hide On Smaller Devices */
-@media only screen and (max-width: 577px) {
+@media only screen and (max-width: 576px) {
+  .main__menu__container {
+    display: none;
+  }
+}
+
+/* Responsive Design for Larger Devices */
+@media only screen and (min-width: 576px) and (max-width: 768px) {
   .main__menu__container {
     display: none;
   }
@@ -69,25 +83,25 @@
 /* Responsive Design for Larger Devices */
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .main__menu__container ul {
-    width: 38%;
+    width: 40%;
     font-size: 17px;
   }
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
   .main__menu__container ul {
-    width: 34%;
+    width: 36%;
   }
 }
 
 @media only screen and (min-width: 1200px) and (max-width: 1399px) {
   .main__menu__container ul {
-    width: 30%;
+    width: 32%;
   }
 }
 
 @media only screen and (min-width: 1400px) {
   .main__menu__container ul {
-    width: 20%;
+    width: 24%;
   }
 }
