--- a/src/styles/components/LandingPage.css
+++ b/src/styles/components/LandingPage.css
@@ -1,6 +1,7 @@
 .landing__page__container {
-  height: 100vh;
-  padding: 40px 28px;
+  height: 96vh;
+  padding: 80px 28px;
+  padding-bottom: 120px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -14,34 +15,40 @@
 .landing__page__left p:nth-of-type(1) {
   text-transform: uppercase;
   margin-bottom: 20px;
-  font-size: 1.3rem;
+  font-size: 1em;
+  font-family: "SF Mono";
+  letter-spacing: 1.5px;
 }
 .landing__page__left h1 {
   text-transform: capitalize;
-  font-size: 4.4rem;
+  font-size: 3em;
   letter-spacing: 1px;
   margin-bottom: 12px;
+  font-family: "Roboto Mono";
 }
 .landing__page__left h5 {
-  font-size: 1.6rem;
+  font-size: 1.2em;
   color: var(--primary-color);
   text-transform: uppercase;
   line-height: 1.6;
-  letter-spacing: 0.55px;
+  letter-spacing: 1px;
   margin-bottom: 16px;
+  font-family: "Roboto Mono";
 }
 .landing__page__left p:nth-of-type(2) {
-  font-size: 1.5rem;
   margin-bottom: 50px;
   line-height: 1.6;
+  font-family: "Montserrat";
+  font-size: 1em;
+  letter-spacing: 1px;
 }
 
 .landing__page__left a {
   background-color: var(--primary-color);
   text-decoration: none;
   color: black;
-  padding: 1ch 5ch;
-  font-size: 1.6rem;
+  padding: 12px 46px;
+  font-size: 1.4rem;
   border-radius: 10px;
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
@@ -59,13 +66,28 @@
   .landing__page__left {
     width: 80%;
   }
+  .landing__page__left p:nth-of-type(1) {
+    font-size: 1.1rem;
+    letter-spacing: 1px;
+  }
+  .landing__page__left h1 {
+    font-size: 3.4em;
+    letter-spacing: 2px;
+  }
+  .landing__page__left h5 {
+    font-size: 1.3rem;
+  }
+  .landing__page__left p:nth-of-type(2) {
+    font-size: 1em;
+  }
 }
 
 @media only screen and (min-width: 769px) and (max-width: 992px) {
   .landing__page__left {
-    width: 70%;
+    width: 60%;
   }
   .landing__page__right {
+    width: 30%;
     display: inline-block;
   }
 }
@@ -76,16 +98,22 @@
   }
   .landing__page__right {
     display: inline-block;
-    width: 35%;
+    width: 30%;
+    margin-right: 2%;
   }
 }
 
 @media only screen and (min-width: 1401px) {
   .landing__page__left {
-    width: 45%;
+    width: 50%;
   }
   .landing__page__right {
     display: inline-block;
-    width: 50%;
+    width: 25%;
+    margin-right: 5%;
+  }
+  .landing__page__container {
+    padding: 80px 28px;
+    padding-bottom: 70px;
   }
 }
