About Page Version 1.0 : Animate Image Border

--- a/src/styles/base/colors.css
+++ b/src/styles/base/colors.css
@@ -4,8 +4,8 @@
 
   /* Text & Highlight Colors */
   --primary-color: #fce762;
+  --secondary-color: #8affc1;
 
-  --secondary-color: #f87060;
   --primary-highlight-color: ;
   --secondary-highlight-color: #ffee88;
 
