--- a/src/styles/components/AboutPage.css
+++ b/src/styles/components/AboutPage.css
@@ -1,18 +1,20 @@
 .about__page__container {
-  padding: 10% 25px;
+  padding: 15% 0px;
 }
 .about__page__inner__container {
   padding-top: 0%;
   display: flex;
+  align-items: flex-start;
   flex-direction: column;
 }
 .about__page__left {
+  width: 100%;
   display: flex;
-  padding-left: 86px;
+  padding-left: 64px;
 }
 .about__page__border {
-  width: 400px;
-  height: 450px;
+  width: 320px;
+  height: 400px;
   border: 10px solid var(--primary-color);
   transform: translate(-36px, 26px);
   -webkit-transform: translate(-36px, 26px);
@@ -21,24 +23,27 @@
   -o-transform: translate(-36px, 26px);
 }
 .about__page__image {
-  width: 400px;
-  max-height: 450px;
+  width: 320px;
+  max-height: 400px;
   height: auto;
   position: absolute;
+  object-fit: contain;
 }
 
 .about__page__right {
-  padding: 15% 50px;
+  padding: 15% 28px;
 }
 .about__page__right h3 {
   color: var(--primary-color);
-  font-size: 2rem;
+  font-size: 2.2em;
+  font-family: "Roboto Mono";
 }
 .about__page__right p {
   padding-top: 16px;
-  line-height: 1.5;
-  font-size: 1.2rem;
-  text-align: justify;
+  line-height: 1.6;
+  font-size: 1em;
+  letter-spacing: 1px;
+  font-family: "Montserrat";
   margin-bottom: 50px;
 }
 
@@ -46,10 +51,10 @@
   background-color: var(--primary-color);
   text-decoration: none;
   color: black;
-  font-size: 1.5rem;
-  border-radius: 10px;
+  font-size: 1.2rem;
   text-transform: capitalize;
-  padding: 1.25ch 5.5ch;
+  padding: 12px 24px;
+  border-radius: 10px;
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
   -ms-border-radius: 10px;
@@ -61,28 +66,30 @@
   min-height: 150px;
   margin-top: 100px;
   overflow-y: hidden;
-  padding: 0 35px;
+  padding: 0px;
   margin-bottom: 55px;
 }
 
-.experiance-page-timeline-title {
+.timeline__title {
   color: var(--primary-color);
   font-weight: bold;
-  letter-spacing: 2px;
-  margin-bottom: 1%;
+  font-family: "SF Mono";
+  font-size: 1.2em;
+  letter-spacing: 1px;
+  margin-bottom: 5px;
   text-transform: capitalize;
+  line-height: 1.6;
 }
-.experiance-page-timeline-time {
-  font-size: 0.8em;
+.timeline__time__span {
+  font-size: 0.75em;
   font-style: italic;
-  margin-bottom: 3%;
+  margin-bottom: 12px;
 }
-.experiance-page-timeline-content {
+.timeline__content {
   text-align: start;
-  font-size: 1em;
-  margin-top: 2%;
-  line-height: 180%;
-  color: var(--primary-color);
+  font-size: 0.95em;
+  line-height: 1.6;
+  color: var(--primary-text-color);
 }
 .line {
   position: absolute;
@@ -126,7 +133,7 @@
   padding: 1rem;
   border-radius: 1rem;
   align-items: center;
-  min-height: 300px;
+  min-height: 10px;
   transform: translateX(-100%);
   -webkit-transform: translateX(-);
   -moz-transform: translateX(-);
@@ -177,12 +184,63 @@
 }
 
 @media only screen and (min-width: 577px) and (max-width: 768px) {
+  .about__page__inner__container {
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 992px) {
+  .about__page__inner__container {
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .about__page__border {
+    width: 340px;
+    height: 420px;
+  }
+  .about__page__image {
+    width: 340px;
+    max-height: 420px;
+  }
+  .timeline__title {
+    font-size: 1.3em;
+    letter-spacing: 1.5px;
+  }
+  .timeline__time__span {
+    font-size: 0.85em;
+  }
+  .timeline__content {
+    font-size: 0.95em;
+  }
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1200px) {
+  .about__page__inner__container {
+    flex-direction: row;
+    align-items: center;
+    padding-top: 0%;
+  }
+  .about__page__border {
+    width: 340px;
+    height: 420px;
+  }
+  .about__page__image {
+    width: 340px;
+    max-height: 420px;
+  }
+  .timeline__title {
+    font-size: 1.4em;
+    letter-spacing: 1.5px;
+  }
+  .timeline__time__span {
+    font-size: 0.9em;
+  }
+  .timeline__content {
+    font-size: 1em;
+  }
 }
 
 @media only screen and (min-width: 1200px) and (max-width: 1400px) {
@@ -194,25 +252,47 @@
   .about__page__right {
     padding: 5% 50px;
   }
+  .timeline {
+    padding: 0 24px;
+  }
+  .timeline__title {
+    font-size: 1.5em;
+    font-weight: bold;
+    letter-spacing: 1.5px;
+  }
 }
 
 @media only screen and (min-width: 1401px) {
+  .timeline__title {
+    font-size: 1.6em;
+    font-weight: bold;
+    letter-spacing: 1.5px;
+  }
   .about__page__inner__container {
     flex-direction: row;
     align-items: center;
   }
   .about__page__border {
-    width: 460px;
+    width: 400px;
     height: 510px;
+    transform: translate(-15px, 30px);
+    -webkit-transform: translate(-15px, 30px);
+    -moz-transform: translate(-15px, 30px);
+    -ms-transform: translate(-15px, 30px);
+    -o-transform: translate(-15px, 30px);
   }
   .about__page__image {
     width: 460px;
-    max-height: 510px;
+    min-height: 510px;
+    object-fit: contain;
   }
   .about__page__right {
     padding: 15% 70px;
   }
   .about__page__right {
     padding: 8% 50px;
+  }
+  .timeline {
+    padding: 0 55px;
   }
 }
