--- a/src/styles/components/LandingPage.css
+++ b/src/styles/components/LandingPage.css
@@ -11,6 +11,7 @@
 .landing__page__left {
   width: 100%;
   margin: auto auto;
+  background-color: palegoldenrod;
 }
 .landing__page__left p:nth-of-type(1) {
   text-transform: uppercase;
@@ -109,7 +110,7 @@
   }
   .landing__page__right {
     display: inline-block;
-    width: 25%;
+    width: 28%;
     margin-right: 5%;
   }
   .landing__page__container {
