--- a/src/styles/components/MobileMenu.css
+++ b/src/styles/components/MobileMenu.css
@@ -6,6 +6,7 @@
   right: 0;
   top: 0;
   bottom: 0;
+  height: 100vh;
   z-index: 5;
   display: flex;
   flex-direction: column;
@@ -37,4 +38,10 @@
   letter-spacing: 1px;
   text-decoration: none;
   color: var(--main-body-color);
+}
+
+/* Dynamic Classes */
+.hide--overflow {
+  height: 100vh !important;
+  overflow-y: hidden !important;
 }
