Services Page Version 1.0 : Add Skills bar

--- a/src/styles/components/AboutPage.css
+++ b/src/styles/components/AboutPage.css
@@ -36,7 +36,8 @@
 .about__page__right h3 {
   color: var(--primary-color);
   font-size: 2.2em;
-  font-family: "Roboto Mono";
+  font-family: "SF Mono";
+  letter-spacing: 2px;
 }
 .about__page__right p {
   padding-top: 16px;
