--- a/src/styles/components/ServicePage.css
+++ b/src/styles/components/ServicePage.css
@@ -21,18 +21,20 @@
 .services__card {
   padding-top: 18px;
   position: relative;
-  background-color: #091629;
+  /* background-color: #091629; */
+  background-color: #0f213d;
   min-width: 300px;
   margin-left: auto;
   margin-right: auto;
   width: 85%;
-  height: 325px;
+  min-height: 325px;
   margin-top: 50px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   border-radius: 12px;
   box-shadow: 0 4px 60px rgba(0, 0, 0, 0.5);
+  /* box-shadow: 0 1.6rem 2.4rem rgb(0 0 0 / 25%); */
   -webkit-border-radius: 12px;
   -moz-border-radius: 12px;
   -ms-border-radius: 12px;
@@ -147,7 +149,7 @@
     padding: 0 3%;
   }
   .services__card {
-    width: 47%;
+    width: 40%;
     height: 340px;
     margin-top: 100px;
   }
@@ -195,4 +197,64 @@
 .services__card:nth-of-type(4):hover {
   color: white;
   background-color: #8838b4;
+}
+
+@media only screen and (max-width: 768px) {
+  .services__card {
+    padding-bottom: 12px;
+    background-color: #091629;
+    transition: none;
+    -webkit-transition: none;
+    -moz-transition: none;
+    -ms-transition: none;
+    -o-transition: none;
+  }
+  .services__card:nth-of-type(1) {
+    border: 2px solid #31afd4;
+  }
+  .services__card:nth-of-type(2) {
+    border: 2px solid #e31f71;
+  }
+  .services__card:nth-of-type(3) {
+    border: 2px solid #8838b4;
+  }
+  .services__card:nth-of-type(4) {
+    border: 2px solid #20bf55;
+  }
+  .services__card__border {
+    display: none;
+    transition: none;
+    -webkit-transition: none;
+    -moz-transition: none;
+    -ms-transition: none;
+    -o-transition: none;
+  }
+  .services__card:hover {
+    transform: scale(1);
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    -o-transform: scale(1);
+  }
+
+  .services__card:hover .services__card__border {
+    width: 100%;
+  }
+
+  .services__card:nth-of-type(1):hover {
+    background-color: #091629;
+    color: var(--primary-text-color);
+  }
+  .services__card:nth-of-type(2):hover {
+    background-color: #091629;
+    color: var(--primary-text-color);
+  }
+  .services__card:nth-of-type(3):hover {
+    background-color: #091629;
+    color: var(--primary-text-color);
+  }
+  .services__card:nth-of-type(4):hover {
+    background-color: #091629;
+    color: var(--primary-text-color);
+  }
 }
