--- a/src/styles/components/ServicePage.css
+++ b/src/styles/components/ServicePage.css
@@ -34,7 +34,6 @@
   justify-content: space-between;
   border-radius: 12px;
   box-shadow: 0 4px 60px rgba(0, 0, 0, 0.5);
-  /* box-shadow: 0 1.6rem 2.4rem rgb(0 0 0 / 25%); */
   -webkit-border-radius: 12px;
   -moz-border-radius: 12px;
   -ms-border-radius: 12px;
@@ -51,7 +50,6 @@
   margin: 10px 24px;
   width: 90px;
   height: 90px;
-  /* background-color: yellow; */
   margin-bottom: 12px;
   padding: 10px;
   display: flex;
@@ -76,6 +74,7 @@
   background-color: #56ce7240;
   z-index: 0;
 }
+
 .services__card__icon__container img {
   width: 60px;
   height: 60px;
@@ -138,7 +137,7 @@
     justify-content: space-between;
   }
   .services__card {
-    width: 47%;
+    width: 46%;
     height: 340px;
   }
 }
@@ -208,6 +207,14 @@
     -moz-transition: none;
     -ms-transition: none;
     -o-transition: none;
+  }
+  .services__card__icon__container {
+    width: 80px;
+    height: 80px;
+  }
+  .services__card__icon__container img {
+    width: 50px;
+    height: 50px;
   }
   .services__card:nth-of-type(1) {
     border: 2px solid #31afd4;
