--- a/src/styles/base/util.css
+++ b/src/styles/base/util.css
@@ -38,3 +38,105 @@
 .align-items-end {
   justify-content: end;
 }
+
+/* Width */
+.w45 {
+  width: 45%;
+}
+
+/* Margin */
+.margin-left-4 {
+  margin-left: 4px;
+}
+.margin-left-6 {
+  margin-left: 6px;
+}
+.margin-left-8 {
+  margin-left: 8px;
+}
+.margin-left-10 {
+  margin-left: 10px;
+}
+.margin-left-12 {
+  margin-left: 12px;
+}
+.margin-left-32 {
+  margin-left: 32px;
+}
+/*  */
+.margin-right-4 {
+  margin-right: 4px;
+}
+.margin-right-6 {
+  margin-right: 6px;
+}
+.margin-right-8 {
+  margin-right: 8px;
+}
+.margin-right-10 {
+  margin-right: 10px;
+}
+.margin-right-12 {
+  margin-right: 12px;
+}
+.margin-right-32 {
+  margin-right: 32px;
+}
+
+/*  */
+.margin-top-4 {
+  margin-top: 4px;
+}
+.margin-top-6 {
+  margin-top: 6px;
+}
+.margin-top-8 {
+  margin-top: 8px;
+}
+.margin-top-10 {
+  margin-top: 10px;
+}
+.margin-top-12 {
+  margin-top: 12px;
+}
+.margin-top-32 {
+  margin-top: 32px;
+}
+.margin-top-50 {
+  margin-top: 50px;
+}
+/*  */
+.margin-bottom-4 {
+  margin-bottom: 4px;
+}
+.margin-bottom-6 {
+  margin-bottom: 6px;
+}
+.margin-bottom-8 {
+  margin-bottom: 8px;
+}
+.margin-bottom-10 {
+  margin-bottom: 10px;
+}
+.margin-bottom-12 {
+  margin-bottom: 12px;
+}
+.margin-bottom-32 {
+  margin-bottom: 32px;
+}
+/*  */
+.margin-4 {
+  margin: 4px;
+}
+.margin-6 {
+  margin: 6px;
+}
+.margin-8 {
+  margin: 8px;
+}
+.margin-10 {
+  margin: 10px;
+}
+.margin-12 {
+  margin: 12px;
+}
