--- a/src/styles/base/font.css
+++ b/src/styles/base/font.css
@@ -1,23 +1,28 @@
 @font-face {
   font-family: "SF Mono";
   src: url("../../../public/assets/fonts/SF-Mono/SFMonoRegular.otf");
+  font-display: swap;
 }
 
 @font-face {
   font-family: "Montserrat";
   src: url("../../../public/assets/fonts/Montserrat/Montserrat-Regular.ttf");
+  font-display: swap;
 }
 
 @font-face {
   font-family: "Raleway";
   src: url("../../../public/assets/fonts/Raleway/Raleway-VariableFont_wght.ttf");
+  font-display: swap;
 }
 @font-face {
   font-family: "Roboto Mono";
   src: url("../../../public/assets/fonts/Roboto_Mono/RobotoMono-VariableFont_wght.ttf");
+  font-display: swap;
 }
 
 @font-face {
   font-family: "Architects Daughter";
   src: url("../../../public/assets/fonts/Architects-Daughter/ArchitectsDaughter-Regular.ttf");
+  font-display: swap;
 }
