--- a/src/styles/components/ContactPage.css
+++ b/src/styles/components/ContactPage.css
@@ -17,7 +17,7 @@
 }
 
 .contact__container__left h2 {
-  font-family: "SF Mono";
+  font-family: "SF Mono", serif;
   font-size: 2em;
   letter-spacing: 1px;
 
@@ -26,7 +26,7 @@
 
 .contact__container__left p {
   margin-top: 16px;
-  font-family: "Montserrat";
+  font-family: "Montserrat", sans-serif;
   font-size: 1em;
   letter-spacing: 1px;
   line-height: 1.6;
@@ -53,7 +53,7 @@
   align-self: center;
 }
 .contact__info__container div {
-  font-family: "SF Mono";
+  font-family: "SF Mono", serif;
   font-size: 1.1em;
   letter-spacing: 0.5px;
 }
@@ -94,7 +94,7 @@
   /* min-height: 50vh; */
 }
 .contact__container__right h2 {
-  font-family: "SF Mono";
+  font-family: "SF Mono", serif;
   font-size: 1.2em;
   letter-spacing: 1px;
   color: var(--primary-color);
@@ -104,7 +104,7 @@
 .contact__form__label {
   margin-bottom: 6px;
   font-size: 0.8em;
-  font-family: "Montserrat";
+  font-family: "Montserrat", sans-serif;
   letter-spacing: 1px;
   color: var(--primary-text-color);
 }
@@ -119,7 +119,7 @@
   border: none;
   height: 36px;
   font-size: 0.9em;
-  font-family: "Montserrat";
+  font-family: "Montserrat", sans-serif;
   letter-spacing: 1px;
   color: var(--primary-text-color);
   border-bottom: 1px solid var(--primary-text-color);
@@ -160,7 +160,7 @@
 #MessageErrorMessage {
   opacity: 0;
   margin-top: 12px;
-  font-family: "SF Mono";
+  font-family: "SF Mono", serif;
   letter-spacing: 1px;
   font-size: 12px;
 }
