--- a/src/styles/components/LandingPage.css
+++ b/src/styles/components/LandingPage.css
@@ -16,7 +16,7 @@
   text-transform: uppercase;
   margin-bottom: 20px;
   font-size: 1em;
-  font-family: "SF Mono";
+  font-family: "SF Mono", sans-serif;
   letter-spacing: 1.5px;
 }
 .landing__page__left h1 {
@@ -24,7 +24,7 @@
   font-size: 3em;
   letter-spacing: 1px;
   margin-bottom: 12px;
-  font-family: "Roboto Mono";
+  font-family: "Roboto Mono", sans-serif;
 }
 .landing__page__left h2 {
   font-size: 1.2em;
@@ -33,12 +33,12 @@
   line-height: 1.6;
   letter-spacing: 1px;
   margin-bottom: 16px;
-  font-family: "Roboto Mono";
+  font-family: "Roboto Mono", sans-serif;
 }
 .landing__page__left p:nth-of-type(2) {
   margin-bottom: 50px;
   line-height: 1.6;
-  font-family: "Montserrat";
+  font-family: "Montserrat", sans-serif;
   font-size: 1em;
   letter-spacing: 1px;
 }
