--- a/src/styles/components/MainMenu.css
+++ b/src/styles/components/MainMenu.css
@@ -5,7 +5,7 @@
   padding: 25px 35px 25px 0;
   display: flex;
   align-items: center;
-  font-family: "Raleway";
+  font-family: "Raleway", serif;
   letter-spacing: 0.5px;
   text-transform: capitalize;
   background-color: var(--main-body-color);
@@ -41,7 +41,7 @@
   text-decoration: none;
   color: var(--primary-text-color);
   font-size: 15px;
-  font-family: "Raleway";
+  font-family: "Raleway", serif;
   font-size: 0.9em;
   transition: color 1200ms cubic-bezier(0.68, -0.6, 0.32, 1.6);
   -webkit-transition: color 1200ms cubic-bezier(0.68, -0.6, 0.32, 1.6);
